# tip-the-footy

./: .gitignore  AFL_TIPPING_MODEL_PLAN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: weekly_predictions.yml
config/: model_config.runtime.toml  model_config.toml
data/: features.csv  historical_games.csv
models/: classifier.pkl  col_means.pkl  regressor.pkl
notebooks/: pipeline_playground.py  pipeline_run_history.csv
predictions/: round_0.csv  round_0.json
scripts/: app_config.py  build_features.py  fetch_data.py  generate_predictions.py  run_pipeline.py  train_model.py
tests/: test_app_config.py  test_build_features.py  test_fetch_data.py  test_generate_predictions.py  test_run_pipeline.py  test_train_model.py
