[project]
name = "tip-the-footy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "pandas>=2.1",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "mcp>=1.26.0",
    "pydantic-ai>=1.65.0",
]

[tool.setuptools.packages.find]
include = ["scripts*"]

[dependency-groups]
dev = [
    "jupyter>=1.0",
    "marimo>=0.11",
    "pytest>=7.0",
    "pytest-mock>=3.11",
]

